Adding comments of my TO-DO list

--- a/tutorial_01/rbf.ipynb
+++ b/tutorial_01/rbf.ipynb
@@ -207,7 +207,9 @@
     "    my_rng = np.random.default_rng()\n",
     "    x_data = np.sort(my_rng.uniform(x_limits[0], x_limits[1], number_of_samples))\n",
     "    y_data = my_rng.uniform(y_limits[0], y_limits[1], number_of_samples)\n",
-    "    return np.vstack((x_data, y_data))\n"
+    "    return np.vstack((x_data, y_data))\n",
+    "\n",
+    "    #Currently refactored up to here\n"
    ]
   },
   {
@@ -234,6 +236,8 @@
     }
    ],
    "source": [
+    "#Need to fix from here onwards and fix the other file\n",
+    "\n",
     "my_regularizer = 0.1\n",
     "\n",
     "my_new_sample_size = 15\n",
