Minor updates - Adding function to return weights from regularized rbf regression

--- a/tutorial_01/rbf.ipynb
+++ b/tutorial_01/rbf.ipynb
@@ -53,7 +53,7 @@
     "    \"\"\"\n",
     "    return np.exp((-(x-c)**2)/(h**2))\n",
     "\n",
-    "def centre_array(h: float, number_of_features: int) -> np.ndarray:\n",
+    "def rbf_centres_array(h: float, number_of_features: int) -> np.ndarray:\n",
     "    \"\"\"\n",
     "    Calculate the center array for a given number of features and spacing.\n",
     "\n",
@@ -90,7 +90,7 @@
     "    \"\"\"\n",
     "    return (1-((number_of_features // 2)+1),number_of_features-((number_of_features // 2)+1))\n",
     "\n",
-    "def x_values(h: float, number_of_features: int, grid_size: float) -> np.ndarray:\n",
+    "def plotting_x_values(h: float, number_of_features: int, grid_size: float) -> np.ndarray:\n",
     "    \"\"\"\n",
     "    Generate an array of x values based on the given parameters.\n",
     "\n",
@@ -132,9 +132,9 @@
     "    - Finally, the function plots each RBF with a unique color and displays the plot.\n",
     "    \"\"\"\n",
     "\n",
-    "    my_centres = centre_array(my_h, my_number_of_features)\n",
+    "    my_centres = rbf_centres_array(my_h, my_number_of_features)\n",
     "\n",
-    "    my_x_values = x_values(my_h, my_number_of_features, x_grid)\n",
+    "    my_x_values = plotting_x_values(my_h, my_number_of_features, x_grid)\n",
     "\n",
     "    #(2000,100) (n*p) array of y values where each row is the 100 rbf functions \n",
     "    my_y_values = my_rbf(my_h, my_x_values[:, np.newaxis], my_centres)\n",
@@ -214,6 +214,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def regularized_rbf_regression(h, number_of_features, regularizing_param, x_data, y_data):\n",
+    "    centres = rbf_centres_array(h, number_of_features)\n",
+    "    phi_features = my_rbf(x_data[:, np.newaxis], centres)\n",
+    "    regularizing_matrix = np.sqrt(regularizing_param) * np.eye(number_of_features)\n",
+    "    augmented_y_values = np.hstack((y_data, np.zeros(number_of_features)))\n",
+    "    augmented_feature_values = np.vstack((phi_features,regularizing_matrix))\n",
+    "    return np.linalg.lstsq(augmented_feature_values, augmented_y_values, rcond=None)[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 167,
    "metadata": {},
    "outputs": [
@@ -238,13 +253,12 @@
    "source": [
     "#Need to fix from here onwards and fix the other file\n",
     "\n",
-    "my_regularizer = 0.1\n",
+    "#Choose the data parameters you want to sample from\n",
+    "data = data_generator(70, (-1,1,), (-1,1))\n",
+    "x_data = data[0]\n",
+    "y_data = data[1]\n",
     "\n",
-    "my_new_sample_size = 15\n",
     "\n",
-    "\n",
-    "\n",
-    "my_new_y_data = my_new_rng.uniform(-1,1, my_new_sample_size)\n",
     "\n",
     "new_phi_feature_values = my_rbf(my_new_x_data[:, np.newaxis], my_centres)\n",
     "\n",
